spring-boot-postgres/k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-app
      name: my-demo 
  template:
    metadata:
      name: demo-pod
      labels:
        app: my-app
        name: my-demo 
    spec:
      containers:
        - name: demo
          image: demo:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
