spring-boot-postgres/k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
      name: my-postgres
  template:
    metadata:
      name: postgres-pod
      labels:
        app: my-app
        name: my-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
