spring-boot-postgres/k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  #type: NodePort # When need a cluster up type when using Ingress
  selector:
    app: my-app
    name: my-demo
  ports:
    - port: 8080
      #targetPort: 8080
      #nodePort: 30001 # When don't need a nodePort when using Ingress
